--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,8 +7,15 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node", "jest"]
   },
-  "include": ["*.ts"],
+  "include": [
+    "*.ts",
+    "tests/**/*.ts",
+    "schemas/**/*.ts",
+    "routes/**/*.ts",
+    "controllers/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
