feat & fix: Criando as páginas e componentes do painel de administrador, dashboard de performance e registro completo do usuário. Consumindo API e ajustando README.md e ARQUITETURA.MD

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
     volumes:
       - ./client:/usr/src/app
       - /usr/src/app/node_modules
+    environment:
+      - ADMIN_SECRET=admin123
     depends_on:
       - server
     networks:
